# Laboratory-works-sem1-2020-2021-academic-year

./: README.md  README.txt
build-lab2-Desktop_Qt_5_15_1_MinGW_32_bit-Debug/: Makefile  Makefile.Release
dataBase/: CMakeLists.txt  main.c  source.c  source.h
fullLab2/build-lab2-Desktop_Qt_5_15_1_MinGW_32_bit-Debug/: Makefile.Debug
lab1/: CMakeLists.txt  README.txt  date.cpp  date.h  graph.cpp  graph.h  main.cpp
lab1/tests/: doctest_main.cpp  tests.cpp
lab2/: .ninja_deps  .ninja_log  .ninja_log.recompact  .ninja_log.restat  CMakeCache.txt  CMakeLists.txt  README.txt  build.ninja  cmake_install.cmake  dataNotes.txt  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  note.cpp  note.h  notewindow.cpp  notewindow.h  notewindow.ui
lab2/.cmake/api/v1/reply/: cache-v2-4f9ba9652c7868489441.json  cache-v2-f1845653ac1245ef127d.json  cmakeFiles-v1-7af85fd9655872594471.json  cmakeFiles-v1-dd0d5f1cff79add935e3.json  index-2020-10-18T12-16-05-0842.json  (+11 more)
lab2/files/: dataArchievedNotes.txt  dataNotes.txt
lab2/files/notesText/: 16.11.2020_20.29.59.txt  19.10.2020_23.42.56.txt  25.10.2020_21.23.23.txt  25.10.2020_21.23.51.txt  25.10.2020_21.24.03.txt  25.10.2020_22.28.08.txt
lab2/lab2_autogen/: deps  mocs_compilation.cpp
lab2/lab2_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_notewindow.cpp
lab2/lab2_autogen/include/: ui_mainwindow.h  ui_notewindow.h
project/: CMakeLists.txt  main.cpp
project_2d_game/: CMakeLists.txt  README.txt  lab3_report_Bernada_K-28.docx  main.cpp
project_2d_game/include/: Game.h  Map.h  Menu.h  Mission.h  Player.h  View.h
